scrollbar css fix

--- a/treeoflife/style.css
+++ b/treeoflife/style.css
@@ -132,9 +132,9 @@ button:active {
   color: white;
 }
 
-#hidden {
-  color: #0000;
-  background-color: #0000;
+#bottom {
+  width: 100%;
+  height: 10%;
 }
 
 div {
